@@ -23,7 +23,6 @@ import org.elasticsearch.client.node.NodeClient;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.NamedDiff;
 import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
-import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.metadata.SingleNodeShutdownMetadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
@@ -57,7 +56,6 @@ import org.elasticsearch.license.LicensedFeature;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.monitor.jvm.JvmInfo;
 import org.elasticsearch.monitor.os.OsProbe;
-import org.elasticsearch.monitor.os.OsStats;
 import org.elasticsearch.persistent.PersistentTaskParams;
 import org.elasticsearch.persistent.PersistentTaskState;
 import org.elasticsearch.persistent.PersistentTasksExecutor;
@@ -181,7 +179,6 @@ import org.elasticsearch.xpack.core.ml.inference.persistence.InferenceIndexConst
 import org.elasticsearch.xpack.core.ml.job.config.JobTaskState;
 import org.elasticsearch.xpack.core.ml.job.persistence.AnomalyDetectorsIndex;
 import org.elasticsearch.xpack.core.ml.job.snapshot.upgrade.SnapshotUpgradeTaskState;
-import org.elasticsearch.xpack.core.ml.notifications.NotificationsIndex;
 import org.elasticsearch.xpack.core.ml.utils.ExceptionsHelper;
 import org.elasticsearch.xpack.core.template.TemplateUtils;
 import org.elasticsearch.xpack.ml.action.TransportCloseJobAction;
@@ -415,8 +412,6 @@ import org.elasticsearch.xpack.ml.rest.validate.RestValidateJobConfigAction;
 import org.elasticsearch.xpack.ml.utils.persistence.ResultsPersisterService;
 
 import java.io.IOException;
-import java.math.BigInteger;
-import java.nio.file.Path;
 import java.time.Clock;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -426,7 +421,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Supplier;
-import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
@@ -460,21 +454,25 @@ public class MachineLearning extends Plugin
     // This is for performance testing. It's not exposed to the end user.
     // Recompile if you want to compare performance with C++ tokenization.
     public static final boolean CATEGORIZATION_TOKENIZATION_IN_JAVA = true;
-    public static final String ML_FEATURE_FAMILY = "machine-learning";
 
     public static final LicensedFeature.Persistent ML_ANOMALY_JOBS_FEATURE = LicensedFeature.persistent(
-        ML_FEATURE_FAMILY,
+        MachineLearningField.ML_FEATURE_FAMILY,
         "anomaly-detection-job",
         License.OperationMode.PLATINUM
     );
     public static final LicensedFeature.Persistent ML_ANALYTICS_JOBS_FEATURE = LicensedFeature.persistent(
-        ML_FEATURE_FAMILY,
+        MachineLearningField.ML_FEATURE_FAMILY,
         "data-frame-analytics-job",
         License.OperationMode.PLATINUM
     );
     public static final LicensedFeature.Persistent ML_MODEL_INFERENCE_FEATURE = LicensedFeature.persistent(
-        ML_FEATURE_FAMILY,
+        MachineLearningField.ML_FEATURE_FAMILY,
         "model-inference",
+        License.OperationMode.PLATINUM
+    );
+    public static final LicensedFeature.Persistent ML_PYTORCH_MODEL_INFERENCE_FEATURE = LicensedFeature.persistent(
+        MachineLearningField.ML_FEATURE_FAMILY,
+        "pytorch-model-inference",
         License.OperationMode.PLATINUM
     );
 
@@ -493,9 +491,8 @@ public class MachineLearning extends Plugin
         return Collections.singletonMap(InferenceProcessor.TYPE, inferenceFactory);
     }
 
-    // This is not used in v7 and higher, but users are still prevented from setting it directly to avoid confusion
-    private static final String PRE_V7_ML_ENABLED_NODE_ATTR = "ml.enabled";
-    public static final String MAX_OPEN_JOBS_NODE_ATTR = "ml.max_open_jobs";
+    // This is not used in v8 and higher, but users are still prevented from setting it directly to avoid confusion
+    private static final String PRE_V8_MAX_OPEN_JOBS_NODE_ATTR = "ml.max_open_jobs";
     public static final String MACHINE_MEMORY_NODE_ATTR = "ml.machine_memory";
     public static final String MAX_JVM_SIZE_NODE_ATTR = "ml.max_jvm_size";
     public static final Setting<Integer> CONCURRENT_JOB_ALLOCATIONS = Setting.intSetting(
@@ -531,11 +528,6 @@ public class MachineLearning extends Plugin
      * This calculation takes into account total node size and the size of the JVM on that node.
      *
      * If the calculation fails, we fall back to `max_machine_memory_percent`.
-     *
-     * This setting is NOT dynamic. This allows the cluster administrator to set it on startup without worry of it
-     * being edited accidentally later.
-     * Consequently, it could be that this setting differs between nodes. But, we only ever pay attention to the value
-     * that is set on the current master. As master nodes are responsible for persistent task assignments.
      */
     public static final Setting<Boolean> USE_AUTO_MACHINE_MEMORY_PERCENT = Setting.boolSetting(
         "xpack.ml.use_auto_machine_memory_percent",
@@ -555,13 +547,14 @@ public class MachineLearning extends Plugin
     // as the current node could be running in a cluster where some nodes are still using
     // that setting. From 8.0.0 onwards we have the flexibility to increase it...
     private static final int MAX_MAX_OPEN_JOBS_PER_NODE = 512;
+    public static final int DEFAULT_MAX_OPEN_JOBS_PER_NODE = MAX_MAX_OPEN_JOBS_PER_NODE;
     // This setting is cluster-wide and can be set dynamically. However, prior to version 7.1 it was
     // a non-dynamic per-node setting. n a mixed version cluster containing 6.7 or 7.0 nodes those
     // older nodes will not react to the dynamic changes. Therefore, in such mixed version clusters
     // allocation will be based on the value first read at node startup rather than the current value.
     public static final Setting<Integer> MAX_OPEN_JOBS_PER_NODE = Setting.intSetting(
         "xpack.ml.max_open_jobs",
-        MAX_MAX_OPEN_JOBS_PER_NODE,
+        DEFAULT_MAX_OPEN_JOBS_PER_NODE,
         1,
         MAX_MAX_OPEN_JOBS_PER_NODE,
         Property.Dynamic,
@@ -647,7 +640,7 @@ public class MachineLearning extends Plugin
     private final SetOnce<DeploymentManager> deploymentManager = new SetOnce<>();
     private final SetOnce<TrainedModelAllocationClusterService> trainedModelAllocationClusterServiceSetOnce = new SetOnce<>();
 
-    public MachineLearning(Settings settings, Path configPath) {
+    public MachineLearning(Settings settings) {
         this.settings = settings;
         this.enabled = XPackSettings.MACHINE_LEARNING_ENABLED.get(settings);
     }
@@ -657,12 +650,8 @@ public class MachineLearning extends Plugin
     }
 
     public static boolean isMlNode(DiscoveryNode node) {
-        Map<String, String> nodeAttributes = node.getAttributes();
-        try {
-            return Integer.parseInt(nodeAttributes.get(MAX_OPEN_JOBS_NODE_ATTR)) > 0;
-        } catch (NumberFormatException e) {
-            return false;
-        }
+        logger.info("DMR node roles are " + node.getRoles());
+        return node.getRoles().contains(DiscoveryNodeRole.ML_ROLE);
     }
 
     public List<Setting<?>> getSettings() {
@@ -689,31 +678,27 @@ public class MachineLearning extends Plugin
     }
 
     public Settings additionalSettings() {
-        String mlEnabledNodeAttrName = "node.attr." + PRE_V7_ML_ENABLED_NODE_ATTR;
-        String maxOpenJobsPerNodeNodeAttrName = "node.attr." + MAX_OPEN_JOBS_NODE_ATTR;
+        String maxOpenJobsPerNodeNodeAttrName = "node.attr." + PRE_V8_MAX_OPEN_JOBS_NODE_ATTR;
         String machineMemoryAttrName = "node.attr." + MACHINE_MEMORY_NODE_ATTR;
         String jvmSizeAttrName = "node.attr." + MAX_JVM_SIZE_NODE_ATTR;
 
         if (enabled == false) {
-            disallowMlNodeAttributes(mlEnabledNodeAttrName, maxOpenJobsPerNodeNodeAttrName, machineMemoryAttrName);
+            disallowMlNodeAttributes(maxOpenJobsPerNodeNodeAttrName, machineMemoryAttrName, jvmSizeAttrName);
             return Settings.EMPTY;
         }
 
         Settings.Builder additionalSettings = Settings.builder();
         if (DiscoveryNode.hasRole(settings, DiscoveryNodeRole.ML_ROLE)) {
-            // TODO: stop setting this attribute in 8.0.0 but disallow it (like mlEnabledNodeAttrName below)
-            // The ML UI will need to be changed to check machineMemoryAttrName instead before this is done
-            addMlNodeAttribute(additionalSettings, maxOpenJobsPerNodeNodeAttrName, String.valueOf(MAX_OPEN_JOBS_PER_NODE.get(settings)));
             addMlNodeAttribute(
                 additionalSettings,
                 machineMemoryAttrName,
-                Long.toString(machineMemoryFromStats(OsProbe.getInstance().osStats()))
+                Long.toString(OsProbe.getInstance().osStats().getMem().getAdjustedTotal().getBytes())
             );
             addMlNodeAttribute(additionalSettings, jvmSizeAttrName, Long.toString(Runtime.getRuntime().maxMemory()));
-            // This is not used in v7 and higher, but users are still prevented from setting it directly to avoid confusion
-            disallowMlNodeAttributes(mlEnabledNodeAttrName);
+            // This is not used in v8 and higher, but users are still prevented from setting it directly to avoid confusion
+            disallowMlNodeAttributes(maxOpenJobsPerNodeNodeAttrName);
         } else {
-            disallowMlNodeAttributes(mlEnabledNodeAttrName, maxOpenJobsPerNodeNodeAttrName, machineMemoryAttrName, jvmSizeAttrName);
+            disallowMlNodeAttributes(maxOpenJobsPerNodeNodeAttrName, machineMemoryAttrName, jvmSizeAttrName);
         }
         return additionalSettings.build();
     }
@@ -799,7 +784,6 @@ public class MachineLearning extends Plugin
         this.datafeedConfigProvider.set(datafeedConfigProvider);
         UpdateJobProcessNotifier notifier = new UpdateJobProcessNotifier(client, clusterService, threadPool);
         JobManager jobManager = new JobManager(
-            environment,
             settings,
             jobResultsProvider,
             jobResultsPersister,
@@ -815,7 +799,6 @@ public class MachineLearning extends Plugin
             datafeedConfigProvider,
             jobConfigProvider,
             xContentRegistry,
-            clusterService,
             settings,
             client
         );
@@ -1020,7 +1003,6 @@ public class MachineLearning extends Plugin
             anomalyDetectionAuditor,
             dataFrameAnalyticsAuditor,
             threadPool,
-            new MlConfigMigrator(settings, client, clusterService, indexNameExpressionResolver),
             clusterService
         );
 
@@ -1228,9 +1210,9 @@ public class MachineLearning extends Plugin
         var usageAction = new ActionHandler<>(XPackUsageFeatureAction.MACHINE_LEARNING, MachineLearningUsageTransportAction.class);
         var infoAction = new ActionHandler<>(XPackInfoFeatureAction.MACHINE_LEARNING, MachineLearningInfoTransportAction.class);
         if (false == enabled) {
-            return Arrays.asList(usageAction, infoAction);
+            return List.of(usageAction, infoAction);
         }
-        return Arrays.asList(
+        return List.of(
             new ActionHandler<>(GetJobsAction.INSTANCE, TransportGetJobsAction.class),
             new ActionHandler<>(GetJobsStatsAction.INSTANCE, TransportGetJobsStatsAction.class),
             new ActionHandler<>(MlInfoAction.INSTANCE, TransportMlInfoAction.class),
@@ -1366,7 +1348,7 @@ public class MachineLearning extends Plugin
             "xpack.ml.datafeed_thread_pool"
         );
 
-        return Arrays.asList(jobComms, utility, datafeed);
+        return List.of(jobComms, utility, datafeed);
     }
 
     @Override
@@ -1393,12 +1375,12 @@ public class MachineLearning extends Plugin
 
     @Override
     public List<SignificanceHeuristicSpec<?>> getSignificanceHeuristics() {
-        return Arrays.asList(new SignificanceHeuristicSpec<>(PValueScore.NAME, PValueScore::new, PValueScore.PARSER));
+        return List.of(new SignificanceHeuristicSpec<>(PValueScore.NAME, PValueScore::new, PValueScore.PARSER));
     }
 
     @Override
     public List<AggregationSpec> getAggregations() {
-        return Arrays.asList(
+        return List.of(
             new AggregationSpec(
                 CategorizeTextAggregationBuilder.NAME,
                 CategorizeTextAggregationBuilder::new,
@@ -1408,49 +1390,17 @@ public class MachineLearning extends Plugin
         );
     }
 
-    @Override
-    public UnaryOperator<Map<String, IndexTemplateMetadata>> getIndexTemplateMetadataUpgrader() {
-        return UnaryOperator.identity();
-    }
-
-    public static boolean allTemplatesInstalled(ClusterState clusterState) {
+    public static boolean criticalTemplatesInstalled(ClusterState clusterState) {
         boolean allPresent = true;
-        List<String> templateNames = Arrays.asList(
-            NotificationsIndex.NOTIFICATIONS_INDEX,
-            STATE_INDEX_PREFIX,
-            AnomalyDetectorsIndex.jobResultsIndexPrefix()
-        );
+        // The templates for the notifications and stats indices are not critical up-front because
+        // every notification and stats update checks if the appropriate template is installed and
+        // installs it if necessary
+        List<String> templateNames = List.of(STATE_INDEX_PREFIX, AnomalyDetectorsIndex.jobResultsIndexPrefix());
         for (String templateName : templateNames) {
-            allPresent = allPresent
-                && TemplateUtils.checkTemplateExistsAndVersionIsGTECurrentVersion(
-                    templateName,
-                    clusterState,
-                    MlIndexTemplateRegistry.COMPOSABLE_TEMPLATE_SWITCH_VERSION
-                );
+            allPresent = allPresent && TemplateUtils.checkTemplateExistsAndVersionIsGTECurrentVersion(templateName, clusterState);
         }
 
         return allPresent;
-    }
-
-    /**
-     * Find the memory size (in bytes) of the machine this node is running on.
-     * Takes container limits (as used by Docker for example) into account.
-     */
-    static long machineMemoryFromStats(OsStats stats) {
-        long mem = stats.getMem().getTotal().getBytes();
-        OsStats.Cgroup cgroup = stats.getCgroup();
-        if (cgroup != null) {
-            String containerLimitStr = cgroup.getMemoryLimitInBytes();
-            if (containerLimitStr != null && containerLimitStr.equals("max") == false) {
-                BigInteger containerLimit = new BigInteger(containerLimitStr);
-                if ((containerLimit.compareTo(BigInteger.valueOf(mem)) < 0 && containerLimit.compareTo(BigInteger.ZERO) > 0)
-                    // mem <= 0 means the value couldn't be obtained for some reason
-                    || (mem <= 0 && containerLimit.compareTo(BigInteger.valueOf(Long.MAX_VALUE)) < 0)) {
-                    mem = containerLimit.longValue();
-                }
-            }
-        }
-        return mem;
     }
 
     @Override
@@ -1568,11 +1518,11 @@ public class MachineLearning extends Plugin
                 .setVersionMetaKey("version")
                 .setOrigin(ML_ORIGIN)
                 .build(),
-            getInferenceIndexSecurityDescriptor()
+            getInferenceIndexSystemIndexDescriptor()
         );
     }
 
-    public static SystemIndexDescriptor getInferenceIndexSecurityDescriptor() {
+    public static SystemIndexDescriptor getInferenceIndexSystemIndexDescriptor() {
         return SystemIndexDescriptor.builder()
             .setIndexPattern(InferenceIndexConstants.INDEX_PATTERN)
             .setPrimaryIndex(InferenceIndexConstants.LATEST_INDEX_NAME)
@@ -1584,11 +1534,51 @@ public class MachineLearning extends Plugin
             .build();
     }
 
+    @Override
+    public void prepareForIndicesMigration(ClusterService clusterService, Client client, ActionListener<Map<String, Object>> listener) {
+        boolean isAlreadyInUpgradeMode = MlMetadata.getMlMetadata(clusterService.state()).isUpgradeMode();
+        if (isAlreadyInUpgradeMode) {
+            // ML is already in upgrade mode, so nothing will write to the ML system indices during their upgrade
+            listener.onResponse(Collections.singletonMap("already_in_upgrade_mode", true));
+            return;
+        }
+
+        // Enable ML upgrade mode before upgrading the ML system indices to ensure nothing writes to them during the upgrade
+        Client originClient = new OriginSettingClient(client, ML_ORIGIN);
+        originClient.execute(
+            SetUpgradeModeAction.INSTANCE,
+            new SetUpgradeModeAction.Request(true),
+            ActionListener.wrap(r -> listener.onResponse(Collections.singletonMap("already_in_upgrade_mode", false)), listener::onFailure)
+        );
+    }
+
+    @Override
+    public void indicesMigrationComplete(
+        Map<String, Object> preUpgradeMetadata,
+        ClusterService clusterService,
+        Client client,
+        ActionListener<Boolean> listener
+    ) {
+        boolean wasAlreadyInUpgradeMode = (boolean) preUpgradeMetadata.getOrDefault("already_in_upgrade_mode", false);
+        if (wasAlreadyInUpgradeMode) {
+            // ML was already in upgrade mode before system indices upgrade started - we shouldn't disable it
+            listener.onResponse(true);
+            return;
+        }
+
+        Client originClient = new OriginSettingClient(client, ML_ORIGIN);
+        originClient.execute(
+            SetUpgradeModeAction.INSTANCE,
+            new SetUpgradeModeAction.Request(false),
+            ActionListener.wrap(r -> listener.onResponse(r.isAcknowledged()), listener::onFailure)
+        );
+    }
+
     /**
      * These are the ML hidden indices. They are "associated" in the sense that if the ML system indices
      * are backed up or deleted then these hidden indices should also be backed up or deleted.
      */
-    private static Collection<AssociatedIndexDescriptor> ASSOCIATED_INDEX_DESCRIPTORS = List.of(
+    private static final Collection<AssociatedIndexDescriptor> ASSOCIATED_INDEX_DESCRIPTORS = List.of(
         new AssociatedIndexDescriptor(RESULTS_INDEX_PREFIX + "*", "Results indices"),
         new AssociatedIndexDescriptor(STATE_INDEX_PREFIX + "*", "State indices"),
         new AssociatedIndexDescriptor(MlStatsIndex.indexPattern(), "ML stats index"),
@@ -1618,10 +1608,11 @@ public class MachineLearning extends Plugin
     @Override
     public void cleanUpFeature(
         ClusterService clusterService,
-        Client client,
+        Client unwrappedClient,
         ActionListener<ResetFeatureStateResponse.ResetFeatureStateStatus> finalListener
     ) {
         logger.info("Starting machine learning feature reset");
+        OriginSettingClient client = new OriginSettingClient(unwrappedClient, ML_ORIGIN);
 
         final Map<String, Boolean> results = new ConcurrentHashMap<>();
 
